--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
     "nativewind-env.d.ts"
-, "app/(tabs)/_layout.jsx", "app/index.jsx", "app/(tabs)/register.jsx", "app/(tabs)/about.jsx", "app/(tabs)/message.jsx", "app/(tabs)/profile.jsx", "app/_layout.jsx", "app/+not-found.jsx"  ]
+, "app/(tabs)/_layout.jsx", "app/index.jsx", "app/(auth)/register.jsx", "app/(tabs)/about.jsx", "app/(tabs)/message.jsx", "app/(tabs)/profile.jsx", "app/_layout.jsx", "app/+not-found.jsx"  ]
 }
